--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,4 +43,5 @@ body {
   font-family: var(--font-sans);
   overscroll-behavior-y: none;
   -webkit-font-smoothing: antialiased;
+  overflow: hidden;
 }
